--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <html lang='en'>
+
 <head>
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Dockerテストページ</title>
 </head>
+
 <body>
     <h1>Hello, Docker!</h1>
     <p>このページが無事表示されていればOKです！</p>
+    <p>このページが無事表示されていればOKです！</p>
+    <p>このページが無事表示されていればOKです！</p>
 </body>
+
 </html>
