--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p>このページが無事表示されていればOKです！</p>
     <p>このページが無事表示されていればOKです！</p>
     <p>このページが無事表示されていればOKです！</p>
+    <p>修正しました</p>
 </body>
 
 </html>
