--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <p>このページが無事表示されていればOKです！</p>
     <p>このページが無事表示されていればOKです！</p>
     <p>修正しました</p>
+    <h1>Hello, Docker!</h1>
 </body>
 
 </html>
